<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/configure_server"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_host"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/hostField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress|textWebEditText"
        android:text="@string/server_host_default" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_port"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/portField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/server_port_default" >
        
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_uuid"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/clientUUIDField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:inputType="textCapCharacters" />

</LinearLayout>