<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:text="@string/print_delay" />

            <EditText
                android:id="@+id/printDelayField"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:text="@string/print_pause" />

            <EditText
                android:id="@+id/printPauseField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="5dp" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:text="@string/print_poll_interval" />

            <EditText
                android:id="@+id/printPollIntervalField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:text="@string/pause_between_jobs" />

            <EditText
                android:id="@+id/printPauseBetweenJobsField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </TableRow>

	    <TableRow
	        android:id="@+id/tableRow6"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView6"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow7"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView7"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/print_connection_errors_retries" />
	
	        <EditText
	            android:id="@+id/printConnectionErrorRetries"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:inputType="number" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow8"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView8"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    </TableRow>
	
	 </TableLayout>

    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/ConfigureNotifications"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="setDefaultValues"
            android:text="@string/print_reset_default_values" />

    </TableRow>
    	    
</LinearLayout>